...
    android:id="@+id/layout_list_item_suspension_interval"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textview_list_item_suspension_interval_no_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/textview_list_item_suspension_interval_margin"
        android:layout_gravity="center_horizontal"
        android:textStyle="normal"
        android:text="@string/list_item_suspension_interval_no_intervals" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_list_item_suspension_interval"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/cardview_list_item_suspension_interval_margin"
        app:cardCornerRadius="@dimen/cardview_list_item_suspension_interval_corner_radius"
        app:cardElevation="@dimen/cardview_list_item_suspension_interval_card_elevation"
...
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/linearlayout_list_item_suspension_interval_margin"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textview_list_item_suspension_interval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/textview_list_item_suspension_interval_margin"
                android:textStyle="normal"
                android:text="" />

            <ImageView
                android:id="@+id/imageview_list_item_suspension_interval_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/list_item_suspension_interval_delete_interval"
                app:srcCompat="@drawable/icon_delete_selector" />
...
