...
                    android:layout_margin="@dimen/linearlayout_activity_global_settings_suspension_enabled_margin"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textview_activity_global_settings_suspension_enabled_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/label_activity_global_settings_suspension_enabled" />

                    <LinearLayout
...
                        android:layout_margin="@dimen/linearlayout_activity_global_settings_suspension_enabled_margin"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:orientation="horizontal">

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/switch_activity_global_settings_suspension_enabled"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:trackTint="@drawable/switchtrack_selector"
                            app:thumbTint="@drawable/switchthumb_selector"
                            android:showText="false" />

...

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_activity_global_settings_suspension_intervals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cardview_activity_global_settings_suspension_intervals_margin"
                app:cardCornerRadius="@dimen/cardview_activity_global_settings_suspension_intervals_corner_radius"
                app:cardElevation="@dimen/cardview_activity_global_settings_suspension_intervals_card_elevation">

...
