...
            android:layout_marginBottom="@dimen/textview_dialog_suspension_intervals_label_margin"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:text="@string/label_dialog_suspension_intervals_intervals" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listview_dialog_suspension_intervals_intervals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/listview_dialog_suspension_intervals_intervals_margin"
            android:padding="@dimen/listview_dialog_suspension_intervals_intervals_padding"
            android:layout_gravity="fill_horizontal"
            android:scrollbars="none" />
...
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/label_dialog_suspension_intervals_ok"
                app:srcCompat="@drawable/icon_ok_selector" />

            <ImageView
                android:id="@+id/imageview_dialog_suspension_intervals_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/label_dialog_suspension_intervals_cancel"
...
